<resources>
    <string name="app_name">Puz</string>
    <string name="r1">Chocolate</string>
    <string name="r2">Coffee Shop</string>
    <string name="r3">Riddle 3</string>
    <string name="riddle">Enter your answer</string>
    <string name="title_activity_maps">Map</string>
    <string name="question">Question 1</string>
    <string name="submit">Submit</string>
    <string name="coffee_question">Find the coffee cup!</string>
    <string name="give_up">Give up</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to signup -->
    <string name="action_sign_up">Sign up</string>

    <!-- Strings related to menu -->
    <string name="action_play">Play</string>
    <string name="action_settings">Settings</string>
    <string name="action_score_board">Score Board</string>
    <string name="action_sign_out">Sign Out</string>


</resources>
