<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.puz.Menu">

    <Button
        android:id="@+id/button6"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="play"
        android:text="@string/action_play"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/action_score_board"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_out"
        android:layout_marginRight="28dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="140dp"
        app:layout_constraintHorizontal_bias="0.535" />
</android.support.constraint.ConstraintLayout>
